# ANDOR

./: .gitignore  CMakeLists.txt  README.md  README.md~  doxygen_config  package.xml
andor/: CMakeLists.txt  CMakeLists.txt~  README.md~  doxygen_config~  package.xml  package.xml~
andor/files/: TRANSPORT.txt~  TRANSPORT_OBJECT.txt~  TableAssembly.txt  TableAssembly.txt~  TableAssembly_L1MiddlePoint.txt~  Table_Assembly.txt~  pencil_assembly.txt  screwing_task.txt~
andor/include/: andorCallback.cpp  andorCallback.h  andor_aograph.cpp  andor_aograph.cpp~  andor_aograph.h  andor_aograph.h~  andor_aonode.cpp  andor_aonode.cpp~  andor_aonode.h  andor_aonode.h~
andor/src/: andor_main.cpp  andor_main.cpp~
andor_msgs/: CMakeLists.txt  README.md  package.xml~
andor_msgs/msg/: Hyperarc.msg  Hyperarc.msg~  Node.msg  Node.msg~
andor_msgs/srv/: andor.srv~  andorSRV.srv  andorSRV.srv~  knowledgeSRV.srv~
docs/: Instructions.md  Write_AND_OR_Graph.md
files/TRO-IKEAKitchenAssembly/: BaseCabinetWithFaucetSink_Assembly.txt  BaseCabinet_Assembly.txt  FaucetAssembly.txt  KNOXHULT_WallCabinetWithDoor_24x12x30.txt  KitchenAssembly.txt  LargeWallCabinet_Assembly.txt  SinkAssembly.txt  StrainerAssembly.txt  SurfaceSinkHoleScenario.txt  WideWallCabinet_Assembly.txt
include/: andorCallback.cpp  andorCallback.h  andor_aograph.cpp  andor_aograph.h  andor_aonode.h  andor_element.h
msg/: Hyperarc.msg  Node.msg
src/: andor_main.cpp  example.cpp
test_andor/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~  setup.py
test_andor/scripts/: randomTest_runner.py
(+154 files in other folders)
